welcome.lessons.welcome.loopfor.LoopFor.scala.code
for ( nbPas <- 1 to 6){
	if(estSurBiscuit==false){
		avance();
	}
	prendBiscuit();
	for( i <- 1 to 6){
		if(i=nbPas){
			recule();
	}
	poseBiscuit();
	}
}

